Demo-1/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CRMG_WF__ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__ActivityDescription__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__ActivitySubject__c</fullName>
        <label>Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
        <label>ORGCUSTOM4_OLD_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>